@@ -10,6 +10,7 @@ Bug fixes:
   rectangle. This is now treated as the center of the rectangle.
 - Stopped the annoying "Attempted to use skill you do not have."
   messages by moving the message from error to debug.
+- Fix autoBreakTime not working on some systems.
 
 New features:
 - Beginnings of code that will allow skill usage on non-partied players.
